k8s/06-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-pagamentos-service
  namespace: unifiapay
  labels:
    app: api-pagamentos
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: api-pagamentos
---
apiVersion: v1
kind: Service
metadata:
  name: api-pagamentos-nodeport
  namespace: unifiapay
  labels:
    app: api-pagamentos
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 30080
    name: http
  selector:
    app: api-pagamentos
