k8s/08-auditoria-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auditoria-service-svc
  namespace: unifiapay
  labels:
    app: auditoria-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: auditoria-service
